fixed whitespace below swiper

--- a/components/layout/Header/Header.module.css
+++ b/components/layout/Header/Header.module.css
@@ -46,7 +46,9 @@
 }
 
 .swiper {
+  box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.25);
   height: fit-content;
+  line-height: 0;
 }
 
 .titleBanner {
